trying to set a font-size for mobile or desktop and use em for relative sizing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
 
 @font-face{font-family: 'Bender';src: url("fonts/Bender.otf");font-weight: normal;font-style: normal;}
 
+@media only screen and (max-width: 900px) {
+	body {
+		font-size: 24px;
+	}
+}
+
+@media only screen and (min-width: 900px) {
+	body {
+		font-size: 18px;
+	  }
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -10,6 +22,7 @@
 html {
   height: 100%;
 }
+
 body {
   min-height: calc(100% - 100px);
 }
@@ -47,7 +60,7 @@ body {
 	margin-right: 20px;
 	padding: 7px;
 	color: #9a8866;
-	font-size: 18px;
+	font-size: 1em;
 }
 
 .menuLink.disabled {
@@ -110,7 +123,7 @@ body {
 }
 
 .rightMenu span {
-	font-size: 24px;
+	font-size: 1.5em;
 	margin: 15px 0;
 	color: #9a8866;
 }
@@ -124,13 +137,13 @@ body {
 }
 
 .rightMenuContent h3 {
-	font-size: 20px;
+	font-size: 1em;
 	font-weight: 400;
 	margin-bottom: 10px;
 }
 
 .rightMenuContent h4 {
-	font-size: 16px;
+	font-size: 1em;
 	font-weight: 400;
 	margin-bottom: 5px;
 }
@@ -151,6 +164,7 @@ body {
 	border: 1px dashed #332f27;
 	border-radius: 5px;
 	overflow: hidden;
+	margin-top: 1em;
 }
 
 .checkbox {
@@ -242,7 +256,7 @@ body {
 
 .itemQuantityTd {
 	color: #e6e6e6;
-	font-size: 30px;
+	font-size: 2em;
 }
 
 .itemQuantityTd a {
@@ -278,13 +292,16 @@ body {
 }
 
 .footer {
+	margin-top: 2em;
 	display: inline-block;
 	text-align: center;
 	padding: 5px 5px 5px 5px;
+	border: 1px dashed #332f27;
+	border-radius: 5px;
 }
 
 .footer h1 {
-	font-size: 24px;
+	font-size: 1.5em;
 	margin: 15px 0;
 	color: #9a8866;
 }
@@ -294,4 +311,5 @@ body {
 	background-color: #0e0e0e;
 	padding: 20px;
 	color: #e6e6e6;
+	font-size: 1em;
 }
