--- a/style.css
+++ b/style.css
@@ -313,3 +313,32 @@ body {
 	color: #e6e6e6;
 	font-size: 1em;
 }
+
+.about-info {
+	margin-top: 2em;
+	border: 1px dashed #332f27;
+	border-radius: 5px;
+	color: #e6e6e6;
+}
+
+.about-info h1 {
+	font-size: 1.5em;
+	margin: 15px 0;
+	color: #9a8866;
+}
+
+.about-info h2 {
+	font-size: 1.2em;
+	margin: 15px 0;
+	color: #9a8866;
+}
+
+.about-info h3 {
+	font-size: 1em;
+	margin: 15px 0;
+	color: #9a8866;
+}
+
+.about-info a {
+	color: #9a8866;
+}
