--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header {
 	padding-left: -15px;
 }
 
+div#settings {
+	margin-top: 1em;
+}
+
 body {
 	background-color: #0e0e0e;
 	font-family: Bender;
