--- a/style.css
+++ b/style.css
@@ -310,12 +310,26 @@ body {
 	color: #9a8866;
 }
 
+.footer h2 {
+	font-size: 1.5em;
+	color: #9a8866;
+}
+
 .footer p {
 	margin-top: 15px;
 	background-color: #0e0e0e;
 	padding: 20px;
 	color: #e6e6e6;
-	font-size: 1.5em;
+	font-size: 1em;
+}
+
+.footer ul {
+	padding-left: 40px;
+	padding-right: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #e6e6e6;
+	font-size: 1em;
 }
 
 .about-info {
