--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ body {
 .footer {
 	margin-top: 2em;
 	display: inline-block;
-	text-align: center;
+	text-align: left;
 	padding: 5px 5px 5px 5px;
 	border: 1px dashed #332f27;
 	border-radius: 5px;
