--- a/style.css
+++ b/style.css
@@ -414,3 +414,28 @@ div.eft-button a {
 	margin-bottom: 0.5em;
 	padding-top: 0.5em;
 }
+
+ /* The alert message box */
+ .alert {
+  padding: 20px;
+  background-color: #46a7f5; /* Blue */
+  color: white;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+} 
